--- a/src/app/pages/dte/template/edit/template-edit.component.html
+++ b/src/app/pages/dte/template/edit/template-edit.component.html
@@ -9,15 +9,6 @@
   <div class="content p-24">
     <div fxLayout="row">
 
-      <!-- REACTIVE FORM EXAMPLE -->
-      <!-- <div class="fuse-widget-front mat-white-bg">
-
-          <div class="px-16 border-bottom" fxLayout="row wrap" fxLayoutAlign="space-between center">
-
-            <div fxFlex class="py-16 h3">Daftar Pesanan Terbaru</div>
-
-          </div> -->
-
       <form class="form" [ngClass]="{'form--edit': !isDetail}" [formGroup]="templateTaskForm" name="form" (keydown.enter)="$event.preventDefault();">
         <div class="form__content mat-elevation-z4 mb-24" fxLayout="column" fxLayoutAlign="start">
           <div class="px-24 border-bottom" fxLayout="row wrap" fxLayoutAlign="space-between center" style="margin-top: 5px;">
@@ -328,8 +319,7 @@
               <video class="template-task-video" [src]="templateTaskForm.get('video').value" controls> </video>
             </div>
 
-            <div formArrayName="questions"
-              *ngFor="let item of templateTaskForm.get('questions')['controls']; let i=index;">
+            <div formArrayName="questions" *ngFor="let item of templateTaskForm.get('questions')['controls']; let i=index;">
               <div [formGroupName]="i" class="py-24">
                 <div class="question-list" fxLayout="row" fxLayoutAlign="space-between start" fxFlex="1 0 auto">
 
@@ -378,6 +368,7 @@
                     </mat-select>
                   </mat-form-field>
                 </div>
+
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
                   <h2 fxFlex="2" style="margin-top: 12px;margin-right: 5px;">{{ i+1 }}.</h2>
                   <mat-form-field fxFlex="100" class="question is-light"
@@ -387,6 +378,7 @@
                       (change)="defaultValue($event, 'questions', 'Pertanyaan', i)"></textarea>
                   </mat-form-field>
                 </div>
+
                 <div class="py-16" fxLayout="row" fxLayoutAlign="start start" fxFlex="1 0 auto"
                   *ngIf="item.get('question_image').value && item.get('typeSelection').value['value'] !== 'stock_check'">
                   <div fxLayout="row" fxLayoutAlign="start start" *ngIf="!isDetail">
@@ -724,6 +716,7 @@
                 </div>
               </div>
             </div>
+
             <div class="footer pt-48">
               <div class="note">Alasan Menolak Pilihan</div>
               <div formArrayName="rejected_reason_choices"
@@ -779,7 +772,6 @@
           ></app-background-misi>
         </div>
       </form>
-      <!-- </div> -->
 
       <div class="mat-white-bg freebirdFormeditorViewFatCard p-4" fxLayout="column" *ngIf="!isDetail">
         <button mat-icon-button matTooltip="Tambahkan Pertanyaan" matTooltipPosition="after" class="secondary-text"
