--- a/src/app/pages/dte/template/create/personalize/template-create-personalize.component.html
+++ b/src/app/pages/dte/template/create/personalize/template-create-personalize.component.html
@@ -208,7 +208,7 @@
                       <div> : </div>
                       <mat-form-field fxFlex appearance="fill" [formGroupName]="idx" floatLabel="never">
                         <mat-label>Judul Misi</mat-label>
-                        <textarea matInput formControlName="name" cdkTextareaAutosize #autosize="cdkTextareaAutosize" class="titletextareaInput"></textarea>
+                        <textarea matInput formControlName="name" cdkTextareaAutosize #autosize="cdkTextareaAutosize" class="titletextareaInput" minlength="3"></textarea>
                         <mat-error>
                           Judul Misi harus diisi
                         </mat-error>
@@ -221,9 +221,6 @@
                       <mat-form-field fxFlex appearance="fill" [formGroupName]="idx" floatLabel="never">
                         <mat-label>Nama Lain Misi</mat-label>
                         <textarea matInput formControlName="other_name" cdkTextareaAutosize #autosize="cdkTextareaAutosize" class="titletextareaInput"></textarea>
-                        <mat-error>
-                          Nama Lain Misi harus diisi
-                        </mat-error>
                       </mat-form-field>
                     </div>
 
