--- a/src/app/pages/settings/role/edit/role-edit.component.html
+++ b/src/app/pages/settings/role/edit/role-edit.component.html
@@ -151,6 +151,11 @@
                     <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="items.value[1].status"
                       [disabled]="isDetail"></mat-slide-toggle>
                   </div>
+                  <div fxFlex="25">
+                    <div class="access-name">{{items.value[4].nama | toCapitalize}}</div>
+                    <mat-slide-toggle class="example-margin" [color]="'primary'" [(ngModel)]="items.value[4].status"
+                      [disabled]="isDetail"></mat-slide-toggle>
+                  </div>
                 </div>
               </div>
               <div class="question" *ngIf="items.nama == 'task verification'">{{'Verifikasi Misi - All' | toCapitalize}}
