--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -7,7 +7,8 @@
   <li><span></span></li>
 </ul> -->
 <div *ngIf="internalSigningIn" style="position: absolute; left: 50%; top: 50%;">
-  <mat-progress-spinner mode="indeterminate" diameter="32" style="margin-left: auto; margin-right: auto;"></mat-progress-spinner>
+  <mat-progress-spinner mode="indeterminate" diameter="32" style="margin-left: auto; margin-right: auto;">
+  </mat-progress-spinner>
   <h2>{{ ls.locale.login.text4 }}</h2>
 </div>
 
@@ -29,8 +30,10 @@
 
             <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
               <mat-form-field class="is-light form-primary">
-                <input id="input-email" matInput type="email" placeholder="{{ ls.locale.login.text2 }}" formControlName="username">
-                <mat-error *ngIf="loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched ">
+                <input id="input-email" matInput type="email" placeholder="{{ ls.locale.login.text2 }}"
+                  formControlName="username">
+                <mat-error
+                  *ngIf="loginForm.controls['username'].hasError('required') && loginForm.controls['username'].touched ">
                   {{ ls.locale.login.text2 }} {{ ls.locale.global.messages.mandatory_text }}
                 </mat-error>
               </mat-form-field>
@@ -38,18 +41,21 @@
 
             <div *ngIf="showExternalUserFields" fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
               <mat-form-field class="is-light form-primary">
-                <input id="input-password" matInput type="{{ showPassword ? 'text' : 'password' }}" formControlName="password" placeholder="{{ ls.locale.login.text3 }}">
+                <input id="input-password" matInput type="{{ showPassword ? 'text' : 'password' }}"
+                  formControlName="password" placeholder="{{ ls.locale.login.text3 }}">
                 <button type="button" mat-button matSuffix mat-icon-button (click)="showPassword = !showPassword">
                   <mat-icon *ngIf="!showPassword">remove_red_eye</mat-icon>
                   <mat-icon *ngIf="showPassword">visibility_off</mat-icon>
                 </button>
-                <mat-error *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched ">
+                <mat-error
+                  *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched ">
                   {{ ls.locale.login.text3 }} {{ ls.locale.global.messages.mandatory_text }}
                 </mat-error>
               </mat-form-field>
             </div>
 
-            <div *ngIf="showExternalUserFields" class="remember-forgot-password" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center">
+            <div *ngIf="showExternalUserFields" class="remember-forgot-password" fxLayout="row" fxLayout.xs="column"
+              fxLayoutAlign="space-between center">
               <mat-checkbox class="remember-me red" [formControl]="rememberMe" aria-label="Remember Me">
                 {{ ls.locale.login.text10 }}
               </mat-checkbox>
@@ -59,12 +65,14 @@
             </div>
 
             <div class="login-button" fxLayout="row">
-              <button id="btn-masuk-login" mat-raised-button aria-label="Login" type="submit" color="primary-red" [disabled]="submitting">
+              <button id="btn-masuk-login" mat-raised-button aria-label="Login" type="submit" color="primary-red"
+                [disabled]="submitting">
                 <ng-container *ngIf="submitting == false">
                   {{ ls.locale.login.text4 }}
                 </ng-container>
                 <ng-container *ngIf="submitting == true">
-                  <mat-progress-spinner mode="indeterminate" diameter="32" style="margin:0 auto;"></mat-progress-spinner>
+                  <mat-progress-spinner mode="indeterminate" diameter="32" style="margin:0 auto;">
+                  </mat-progress-spinner>
                 </ng-container>
               </button>
             </div>
@@ -106,23 +114,26 @@
           </div>
         </div>
       </div>
-      
+
       <div fxLayout="row" fxLayoutAlign="center center">
         <mat-form-field class="w-100-p select-lang">
           <mat-select class="p-0" [(ngModel)]="language" (selectionChange)="changeSelectedLanguage($event)">
-              <!-- <mat-option value="en">
+            <!-- <mat-option value="en">
                   <div>English</div>
               </mat-option> -->
-              <mat-option value="id">
+            <mat-option *ngFor="let country of COUNTRIES" [value]="country.lang">
+              <div>{{country.label}}</div>
+            </mat-option>
+            <!-- <mat-option value="id">
                 <div>Bahasa Indonesia</div>
               </mat-option>
               <mat-option value="km">
                 <div>Khmer</div>
-              </mat-option>
+              </mat-option> -->
           </mat-select>
         </mat-form-field>
       </div>
     </div>
-    
+
   </div>
 </div>
