--- a/src/app/pages/user-management/admin-principal/index/admin-principal-index.component.html
+++ b/src/app/pages/user-management/admin-principal/index/admin-principal-index.component.html
@@ -4,11 +4,11 @@
     <div class="button-row" fxLayout="row">
       <button *ngIf="permission?.buat" style="width: 170px;" mat-raised-button aria-label="Login" type="button"
         [routerLink]="['/user-management','admin-principal','create']">
-        <mat-icon>add</mat-icon>TAMBAH
+        <mat-icon>add</mat-icon>{{ ls.locale.global.button.add }}
       </button>
       <!-- <button style="width: 170px;" mat-raised-button aria-label="Login" type="button" class="is-danger">HAPUS</button> -->
       <button style="min-width: 170px;" *ngIf="selected.length > 0 && permission?.hapus" mat-raised-button type="button"
-        class="is-danger" (click)="deleteAllUser()">NON AKTIFKAN</button>
+        class="is-danger" (click)="deleteAllUser()">{{ ls.locale.global.button.deactivate }}</button>
     </div>
   </page-content-header>
   <!-- / HEADER -->
@@ -16,11 +16,12 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Daftar Admin Principal</h2>
+        <h2 class="pl-8">{{ ls.locale.admin_principal.text7 }}</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
-            <input matInput placeholder="Cari" (keyup)="keyUp.next($event.target.value)" autocomplete="off">
+            <input matInput [placeholder]="ls.locale.global.label.search" (keyup)="keyUp.next($event.target.value)"
+              autocomplete="off">
           </mat-form-field>
         </div>
       </div>
@@ -44,29 +45,30 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Nama" prop="fullname">
+        <ngx-datatable-column [name]="ls.locale.admin_principal.text8" prop="fullname">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <a class="direct-edit" (click)="directDetail(row)">{{row.fullname}} </a>
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="200" name="Email" prop="email" summary-template="activeCell">
+        <ngx-datatable-column [width]="200" [name]="ls.locale.admin_principal.text9" prop="email"
+          summary-template="activeCell">
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Terakhir Masuk" prop="last_login" [sortable]="false">
+        <ngx-datatable-column [name]="ls.locale.admin_principal.text10" prop="last_login" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.last_login | date:'dd/MM/yyyy HH:mm'}}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Terakhir Diubah" prop="updated_at">
+        <ngx-datatable-column [name]="ls.locale.admin_principal.text11" prop="updated_at">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             {{row.updated_at | date:'dd/MM/yyyy HH:mm'}}
             {{row?.updated_by_name ? 'by ' + (row?.updated_by_name | toCapitalize) : '' }}
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="100" name="Status" prop="status">
+        <ngx-datatable-column [width]="100" [name]="ls.locale.admin_principal.text12" prop="status">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
               <p class="status text-truncate h6 p-4"
@@ -78,7 +80,8 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column [width]="98" name="Tindakan" headerClass="textright" [sortable]="false">
+        <ngx-datatable-column [width]="98" [name]="ls.locale.admin_principal.text13" headerClass="textright"
+          [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
             style="justify-content: center !important">
             <div class="button-row" style="margin-left: -10px">
