--- a/src/app/pages/dte/template/create/template-create.component.html
+++ b/src/app/pages/dte/template/create/template-create.component.html
@@ -347,27 +347,32 @@
                     </button>
                   </div>
 
-                  <mat-form-field [id]="'btn-choice-answer-'+(i+1)" class="chooice is-light" fxFlex="30">
-                    <mat-select id="tipeQuestion" formControlName="type" (selectionChange)="changeType(item, i)" (click)="selectForm('tipeQuestion')">
-                      <mat-select-trigger>
-                        <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="100">
-                          <div fxFlex="10">
-                            <mat-icon class="secondary-text">{{item.get('typeSelection').value['icon']}}</mat-icon>
+                  <div fxLayout="column" fxLayoutGap="24px">
+                    <mat-form-field [id]="'btn-choice-answer-'+(i+1)" class="chooice is-light" fxFlex="30">
+                      <mat-select id="tipeQuestion" formControlName="type" (selectionChange)="changeType(item, i)" (click)="selectForm('tipeQuestion')">
+                        <mat-select-trigger>
+                          <div fxLayout="row wrap" fxLayoutAlign="start center" fxFlex="100">
+                            <div fxFlex="10">
+                              <mat-icon class="secondary-text">{{item.get('typeSelection').value['icon']}}</mat-icon>
+                            </div>
+                            <div fxFlex="90">
+                              <span style="padding-left: 34px">{{item.get('typeSelection').value['name']}}</span>
+                            </div>
                           </div>
-                          <div fxFlex="90">
-                            <span style="padding-left: 34px">{{item.get('typeSelection').value['name']}}</span>
-                          </div>
-                        </div>
-                      </mat-select-trigger>
-                      <ng-container>
-                        <mat-option *ngFor="let selection of listChoose" [value]="selection.value"
-                          [disabled]="checkWording(selection.name) === true">
-                          <mat-icon>{{selection.icon}}</mat-icon> {{selection.name}}
-                        </mat-option>
-                      </ng-container>
-                    </mat-select>
-                  </mat-form-field>
+                        </mat-select-trigger>
+                        <ng-container>
+                          <mat-option *ngFor="let selection of listChoose" [value]="selection.value"
+                            [disabled]="checkWording(selection.name) === true">
+                            <mat-icon>{{selection.icon}}</mat-icon> {{selection.name}}
+                          </mat-option>
+                        </ng-container>
+                      </mat-select>
+                    </mat-form-field>
+
+                    <mat-checkbox [id]="'encryption-'+(i)" formControlName="encryption">Encryption</mat-checkbox>
+                  </div>
                 </div>
+
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
                   <h2 fxFlex="2" style="margin-top: 12px;margin-right: 5px;">{{ i+1 }}.</h2>
                   <mat-form-field fxFlex="100" class="question is-light"
