--- a/src/app/pages/dte/template/index/personalize/template-index-personalize.component.html
+++ b/src/app/pages/dte/template/index/personalize/template-index-personalize.component.html
@@ -82,30 +82,50 @@
   
   <ngx-datatable-column [width]="200" name="Nama Lain Misi">
     <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-      <p *ngFor="let item of row.child">{{item.other_name}}</p>
+      <p *ngFor="let item of row.children">{{item.other_name}}</p>
     </ng-template>
   </ngx-datatable-column>
   
   <ngx-datatable-column [width]="150" name="Copywriting" headerClass="textright">
     <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
       <div class="py-24" fxLayout="column" fxLayoutGap="8px">
-        <div class="row__copywrite" *ngFor="let item of row.child" [ngStyle]="{'background-color': item.task_toolbox_copywrite_color}">
-          {{ item.task_toolbox_copywrite_name }}
+        <div class="row__copywrite" *ngFor="let item of row.children" [ngStyle]="{'background-color': item.toolbox_copywrite ? item.toolbox_copywrite.color : 'transparent'}">
+          {{ item.toolbox_copywrite ? item.toolbox_copywrite.name : '' }}
         </div>
       </div>
     </ng-template>
   </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="150" name="Kategory Toolbox" headerClass="textright" prop="task_toolbox_name">
+  <ngx-datatable-column [width]="150" name="Kategory Toolbox" headerClass="textright">
+    <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+      <span>{{row.toolbox.name}}</span>
+    </ng-template>
   </ngx-datatable-column>
-  <ngx-datatable-column [width]="150" name="Tipe Misi" headerClass="textright" prop="task_toolbox_type_name">
+
+  <ngx-datatable-column [width]="150" name="Tipe Misi" headerClass="textright">
+    <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+      <span>{{row.toolbox_type.name}}</span>
+    </ng-template>
   </ngx-datatable-column>
-  <ngx-datatable-column [width]="150" name="Internal Kategori" headerClass="textright"
-    prop="task_toolbox_internal_name"></ngx-datatable-column>
-  <ngx-datatable-column [width]="150" name="Kategori Misi" headerClass="textright"
-    prop="task_toolbox_categories_name"></ngx-datatable-column>
-  <ngx-datatable-column [width]="150" name="Project Misi" headerClass="textright"
-    prop="task_toolbox_project_name"></ngx-datatable-column>
+
+  <ngx-datatable-column [width]="150" name="Internal Kategori" headerClass="textright">
+    <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+      <span>{{row.toolbox_internal.name}}</span>
+    </ng-template>
+  </ngx-datatable-column>
+
+  <ngx-datatable-column [width]="150" name="Kategori Misi" headerClass="textright">
+    <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+      <span>{{row.toolbox_categories.name}}</span>
+    </ng-template>
+  </ngx-datatable-column>
+
+  <ngx-datatable-column [width]="150" name="Project Misi" headerClass="textright">
+    <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+      <span>{{row.toolbox_project.name}}</span>
+    </ng-template>
+  </ngx-datatable-column>
+
   <ngx-datatable-column [width]="150" name="Tindakan" headerClass="textright" [sortable]="false">
     <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
       <div class="button-row" style="margin-left: -10px">
