--- a/src/app/pages/dte/template/create/personalize/template-create-personalize.component.scss
+++ b/src/app/pages/dte/template/create/personalize/template-create-personalize.component.scss
@@ -295,6 +295,16 @@
     font-weight: bold;
   }
 
+  .template-task__label{
+    width: fit-content;
+    padding: 8px;
+    display: flex;
+    gap: 8px;
+    align-items: center;
+    border-radius: 4px;
+    background-color: #f5f5f5;
+  }
+
   .section-shadow{
     box-shadow: 0px 0px 6px rgba(204, 204, 204, 0.75);
   }
@@ -319,7 +329,6 @@
     top: -10px;
   }
 
-  // TODO: baru
   .input-image__text{
     display: flex;
     align-items: center;
@@ -341,10 +350,6 @@
     align-items: flex-start;
     overflow: hidden;
   }
-
-  // .input-image__image{
-  //   width: 100%;
-  // }
 
   #copywriting {
     width: auto;
